--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-rating": "^2.0.5",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
