--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.15",
     "aos": "^2.3.4",
-    "next": "15.0.3",
+    "next": "^15.0.3",
+    "next-nprogress-bar": "^2.3.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-rating": "^2.0.5",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15"
   },
